recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: not found: value levels
		sierpinski(levels-1, length/2)
                           ^Sierpinski:12: error: not found: value lenght
		avance(lenght/2)
                       ^Sierpinski:13: error: not found: value levels
		sierpinski(levels-1, length/2)
                           ^