recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	if (level == 0 ) {
		avance(length)
		droite(120)
		avance(length)
		droite(120)
		avance(length)
		droite(120)
	}
	else {
		sierpinski(levels-1, length/2)
		avance(lenght/2)
		sierpinski(levels-1, length/2)
		
		
	}

}
